[project]
name = "dispatcher"
description = "An extension to easily dispatch custom events for discord bots."
readme = "README.md"
authors = [
    {name = "Snipy7374", email = "snipy7374@gmail.com"}
]
requires-python = ">=3.8"
keywords = ["discord", "discord API", "discord.py"]
license = {text = "MIT"}
dependencies = [
    "Jinja2",
]
dynamic = ["version"]
[project.optional-dependencies]
type-check = [
    "disnake>=2.8.1",
    "nextcord>=2.4.0",
    "py-cord>=2.4.0",
]

[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[tool.setuptools.dynamic]
version = {attr = "dispatcher.__version__"}

[tool.pyright]
typeCheckingMode = "strict"
reportInvalidStringEscapeSequence = false
reportUnusedImport = false
reportUnknownParameterType = false
reportUnknownArgumentType = false
reportUnknownMemberType = false
reportMissingParameterType = false
reportUnnecessaryIsInstance = false
[tool.pdm]
