[project]
name = "dispatcher"
description = "An extension to easily dispatch custom events for discord bots."
authors = [
    { name = "Snipy7374", email = "snipy7374@gmail.com" },
]
dependencies = [
    "Jinja2>=3.1.2",
]
requires-python = ">=3.8"
keywords = ["discord", "discord API", "discord.py"]
readme = "README.md"
license = { text = "MIT" }
dynamic = ["version"]

[project.optional-dependencies]
lint = [
    "disnake>=2.8.1",
    "nextcord>=2.4.0",
    "py-cord>=2.4.0",
]

[tool.pdm.version]
source = "file"
path = "dispatcher/__init__.py"

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"

[tool.pyright]
typeCheckingMode = "strict"
reportInvalidStringEscapeSequence = false
reportUnusedImport = false
reportUnknownParameterType = false
reportUnknownArgumentType = false
reportUnknownMemberType = false
reportMissingParameterType = false
reportUnnecessaryIsInstance = false
reportMissingTypeStubs = false

# Unfortunately it's not even theoretically possible to fix typing in examples.
ignore = ["examples/**"]
