# SPDX-License-Identifier: MIT

[project]
name = "disnake-ext-dispatcher"
description = "An extension to easily dispatch custom events for discord bots."
authors = [
    { name = "Snipy7374", email = "snipy7374@gmail.com" },
]
requires-python = ">=3.8"
keywords = ["discord", "discord API", "discord.py"]
readme = "README.md"
license = { text = "MIT" }
dynamic = ["version"]

[project.optional-dependencies]
lint = [
    "disnake>=2.8.1", # Required for linting examples
]

[tool.pdm.version]
source = "file"
path = "disnake/ext/dispatcher/__init__.py"

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"

[tool.pyright]
typeCheckingMode = "strict"

reportInvalidStringEscapeSequence = true
reportUnusedImport = true
reportUnknownParameterType = true
reportUnknownArgumentType = false

[tool.black]
line-length = 100
target-version = ["py38", "py39", "py310", "py311"]

[tool.isort]
profile = "black"
py_version = 38
line_length = 100

[tool.ruff]
line-length = 100
target-version = "py38"
ignore = [
    "F403", # Star imports
]

[tool.pdm.dev-dependencies]
dev = [
    "pre-commit>=3.1.1",
]

[tool.pdm.scripts]
setup_env = "pre-commit install"
